upgraded to support different column separator and quote characters